Kobler sammen perioder fra søknader ved utledning av status på disse - togglet